--- a/texfiles/sources.bib
+++ b/texfiles/sources.bib
@@ -6,14 +6,18 @@
 }
 
 @article{Codes1950Hamming,
-    author = {Hamming, R. W.},
-    title = {Error detecting and error correcting codes},
-    year = {1950},
-    journal = {The Bell System Technical Journal},
-    volume = {26},
-    number = {2},
-    pages = {147--160},
-    url = {\url{http://sb.fluomedia.org/hamming/}},
+    author={R. W. Hamming},
+    journal={The Bell System Technical Journal},
+    title={Error detecting and error correcting codes},
+    year={1950},
+    volume={29},
+    number={2},
+    pages={147-160},
+    keywords={},
+    doi={10.1002/j.1538-7305.1950.tb00463.x},
+    url = {\url{https://ieeexplore.ieee.org/document/6772729/}},
+    ISSN={0005-8580},
+    month={April}
 }
 
 @article{HammingBarcodes2012BystrykhLeonid,
@@ -213,7 +217,8 @@
 }
 
 @article{CRISPRDailymail,
-    author= {{Daily Mail}},
+    author = {Paul Michael Dacre},
+    journal = {Daily Mail},
     title = {{WHAT IS CRISPR-CAS9?}},
     url = {\url{http://www.dailymail.co.uk/sciencetech/fb-5151843/WHAT-CRISPR-CAS9.html}},
     year = {2015},
@@ -266,7 +271,7 @@
     number = {3},
     pages = {33--34},
     publisher = {University of Texas at Dallas},
-    title = {Responding to {CRISPER}/Cas9 [sic]},
+    title = {Responding to {CRISPER/Cas9} [sic]},
     volume = {32},
     year = {2016}
 }
@@ -356,13 +361,284 @@
 @article{FuzzyDistance1977SGarro,
     ISSN = {03732908},
     URL = {\url{http://www.jstor.org/stable/43680301}},
-    abstract = {A generalization of the usual Hamming distance is investigated; in our case the arguments are sequences of real numbers which belong to the unit interval |0, 1]. This generalization is useful when multi-valued logics are needed instead of the ordinary "yes-no" logic.},
     author = {A. Sgarro},
     journal = {Bulletin mathématique de la Société des Sciences Mathématiques de la République Socialiste de Roumanie},
     number = {1/2},
     pages = {137--144},
     publisher = {Societatea de Științe Matematice din România},
-    title = {A FUZZY HAMMING DISTANCE},
+    title = {A Fuzzy {Hamming} Distance},
     volume = {21 (69)},
     year = {1977}
+}
+
+@misc{oligotm,
+    author = {WA. Kibbe},
+    url = {\url{http://biotools.nubic.northwestern.edu/OligoCalc.html}},
+    journal = {Nucleic Acids Res. 35},
+    title = {{OligoCalc}: an online oligonucleotide properties calculator},
+    year = {2007},
+}
+
+@article{MeltingCurve1979Azbel,
+    ISSN = {00278424},
+    URL = {\url{http://www.jstor.org/stable/69440}},
+    author = {M. Ya Azbel},
+    journal = {Proceedings of the National Academy of Sciences of the United States of America},
+    number = {1},
+    pages = {101--105},
+    publisher = {National Academy of Sciences},
+    title = {{DNA} Sequencing and Melting Curve},
+    volume = {76},
+    year = {1979}
+}
+
+@article{Denaturation2010Reisner,
+    ISSN = {00278424},
+    URL = {\url{http://www.jstor.org/stable/25708710}},
+    author = {Walter Reisner and Niels B. Larsen and Asli Silahtaroglu and Anders Kristensen and Niels Tommerup and Jonas O. Tegenfeldt and Henrik Flyvbjerg and Robert H. Austin},
+    journal = {Proceedings of the National Academy of Sciences of the United States of America},
+    number = {30},
+    pages = {13294--13299},
+    publisher = {National Academy of Sciences},
+    title = {Single-molecule denaturation mapping of {DNA} in nanofluidic channels},
+    volume = {107},
+    year = {2010}
+}
+
+@article{MeltingPoint1980Pitkin,
+    ISSN = {00027685, 19384211},
+    URL = {\url{http://www.jstor.org/stable/4446840}},
+    author = {Ruthanne B. Pitkin and Jon R. Geiger and Jeanne A. Powell and Jon R. Greiger},
+    journal = {The American Biology Teacher},
+    number = {2},
+    pages = {124--125},
+    publisher = {[University of California Press, National Association of Biology Teachers]},
+    title = {{DNA} Melting Point Laboratory},
+    volume = {42},
+    year = {1980}
+}
+
+@article{Soybean2015Li,
+    ISSN = {00320889, 15322548},
+    URL = {\url{http://www.jstor.org/stable/24806452}},
+    author = {Zhongsen Li and Zhan-Bin Liu and Aiqiu Xing and Bryan P. Moon and Jessica P. Koellhoffer and Lingxia Huang and R. Timothy Ward and Elizabeth Clifton and S. Carl Falco and A. Mark Cigan},
+    journal = {Plant Physiology},
+    number = {2},
+    pages = {960--970},
+    publisher = {American Society of Plant Biologists (ASPB)},
+    title = {{Cas9}-Guide {RNA} Directed Genome Editing in Soybean},
+    volume = {169},
+    year = {2015}
+}
+
+@article{Flies2013Ren,
+    ISSN = {00278424},
+    URL = {\url{http://www.jstor.org/stable/23756834}},
+    author = {Xingjie Ren and Jin Sun and Benjamin E. Housden and Yanhui Hu and Charles Roesel and Shuailiang Lin and Lu-Ping Liu and Zhihao Yang and Decai Mao and Lingzhu Sun and Qujie Wu and Jun-Yuan Jie and Jianzhong Xi and Stephanie E. Mohr and Jiang Xu and Norbert Perrimon and Jian-Quan Ni},
+    journal = {Proceedings of the National Academy of Sciences of the United States of America},
+    number = {47},
+    pages = {19012--19017},
+    publisher = {National Academy of Sciences},
+    title = {Optimized gene editing technology for Drosophila melanogaster using germ line-specific {Cas9}},
+    volume = {110},
+    year = {2013}
+}
+
+@article{PlantToolbox2015Lowder,
+    ISSN = {00320889, 15322548},
+    URL = {\url{http://www.jstor.org/stable/24806453}},
+    author = {Levi G. Lowder and Dengwei Zhang and Nicholas J. Baltes and Joseph W. Paul and Xu Tang and Xuelian Zheng and Daniel F. Voytas and Tzung-Fu Hsieh and Yong Zhang and Yiping Qi},
+    journal = {Plant Physiology},
+    number = {2},
+    pages = {971--985},
+    publisher = {American Society of Plant Biologists (ASPB)},
+    title = {A {CRISPR/Cas9} Toolbox for Multiplexed Plant Genome Editing and Transcriptional Regulation},
+    volume = {169},
+    year = {2015}
+}
+
+@article{Maize2015Svitashev,
+    ISSN = {00320889, 15322548},
+    URL = {\url{http://www.jstor.org/stable/24806450}},
+    author = {Sergei Svitashev and Joshua K. Young and Christine Schwartz and Huirong Gao and S. Carl Falco and A. Mark Cigan},
+    journal = {Plant Physiology},
+    number = {2},
+    pages = {931--945},
+    publisher = {American Society of Plant Biologists (ASPB)},
+    title = {Targeted Mutagenesis, Precise Gene Editing, and Site-Specific Gene Insertion in Maize Using {Cas9} and Guide RNA},
+    volume = {169},
+    year = {2015}
+}
+
+@article{StemCells2013Hou,
+    ISSN = {00278424},
+    URL = {\url{http://www.jstor.org/stable/42713388}},
+    author = {Zhonggang Hou and Yan Zhang and Nicholas E. Propson and Sara E. Howden and Li-Fang Chu and Erik J. Sontheimer and James A. Thomson},
+    journal = {Proceedings of the National Academy of Sciences of the United States of America},
+    number = {39},
+    pages = {15644--15649},
+    publisher = {National Academy of Sciences},
+    title = {Efficient genome engineering in human pluripotent stem cells using {Cas9} from Neisseria meningitidis},
+    volume = {110},
+    year = {2013}
+}
+
+@article{KroneckerProduct1955Vartak,
+    ISSN = {00034851},
+    URL = {\url{http://www.jstor.org/stable/2236470}},
+    author = {Manohar Narhar Vartak},
+    journal = {The Annals of Mathematical Statistics},
+    number = {3},
+    pages = {420--438},
+    publisher = {Institute of Mathematical Statistics},
+    title = {On an Application of Kronecker Product of Matrices to Statistical Designs},
+    volume = {26},
+    year = {1955}
+}
+
+@article{Orthogonal1981Burley,
+    ISSN = {00361429},
+    URL = {\url{http://www.jstor.org/stable/2157136}},
+    author = {S. K. Burley and S. O. John and J. Nuttall},
+    journal = {SIAM Journal on Numerical Analysis},
+    number = {5},
+    pages = {919--924},
+    publisher = {Society for Industrial and Applied Mathematics},
+    title = {Vector Orthogonal Polynomials},
+    volume = {18},
+    year = {1981}
+}
+
+@article{Levenshtein2001Navarro,
+    author = {Navarro, Gonzalo},
+    title = {A Guided Tour to Approximate String Matching},
+    journal = {ACM Comput. Surv.},
+    issue_date = {March 2001},
+    volume = {33},
+    number = {1},
+    month = mar,
+    year = {2001},
+    issn = {0360-0300},
+    pages = {31--88},
+    numpages = {58},
+    url = {\url{http://doi.acm.org/10.1145/375360.375365}},
+    doi = {10.1145/375360.375365},
+    acmid = {375365},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {Levenshtein distance, edit distance, online string matching, text searching allowing errors},
+}
+
+@article{StringtoString1974Wagner,
+    author = {Wagner, Robert A. and Fischer, Michael J.},
+    title = {The String-to-String Correction Problem},
+    journal = {J. ACM},
+    issue_date = {Jan. 1974},
+    volume = {21},
+    number = {1},
+    month = jan,
+    year = {1974},
+    issn = {0004-5411},
+    pages = {168--173},
+    numpages = {6},
+    url = {\url{http://doi.acm.org/10.1145/321796.321811}},
+    doi = {10.1145/321796.321811},
+    acmid = {321811},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
+
+@inproceedings{HammingCodes1997Battacharryya,
+    author={D. K. Bhattacharryya and S. Nandi},
+    booktitle={Parallel Architectures, Algorithms, and Networks, 1997. (I-SPAN '97) Proceedings., Third International Symposium on},
+    title={An efficient class of {SEC-DED-AUED} codes},
+    year={1997},
+    volume={},
+    number={},
+    pages={410-416},
+    keywords={error correction codes;error detection codes;information theory;SEC-DED-AUED codes;codes;decoding;encoding;error correcting codes;error detecting codes;Circuit faults;Computer errors;Decoding;Error correction;Error correction codes;Hamming distance;Hardware;Power supplies;Read only memory;Very large scale integration},
+    doi={10.1109/ISPAN.1997.645128},
+    ISSN={1087-4089},
+    month={Dec},
+}
+
+@article{HadamardNote1959Bose,
+    title = "A note on a result in the theory of code construction",
+    journal = "Information and Control",
+    volume = "2",
+    number = "2",
+    pages = "183 - 194",
+    year = "1959",
+    issn = "0019-9958",
+    doi = "https://doi.org/10.1016/S0019-9958(59)90376-6",
+    url = {\url{http://www.sciencedirect.com/science/article/pii/S0019995859903766}},
+    author = "R.C. Bose and S.S. Shrikhande"
+}
+
+@inproceedings{OrthogonalCodes2002Amadei,
+    author={M. Amadei and U. Manzoli and M. L. Merani},
+    booktitle={Global Telecommunications Conference, 2002. GLOBECOM '02. IEEE},
+    title={On the assignment of Walsh and quasi-orthogonal codes in a multicarrier {DS-CDMA} system with multiple classes of users},
+    year={2002},
+    volume={1},
+    number={},
+    pages={841-845 vol.1},
+    keywords={3G mobile communication;code division multiple access;codes;multiuser channels;radio links;sequences;spread spectrum communication;IMT2000;Walsh codes;Walsh sequences;cdma2000;code allocation policies;data rates;forward link;mobile radio system;multicarrier DS-CDMA system;quasi-orthogonal codes;quasi-orthogonal sequences;synchronous downlink;system performance;third generation air interface specification;third generation mobile radio systems;variable spreading factor;Decision support systems;Error analysis;Error probability;Fading;Frequency;Land mobile radio;Multiaccess communication;Physical layer;Proposals;System performance},
+    doi={10.1109/GLOCOM.2002.1188196},
+    url = {\url{https://ieeexplore.ieee.org/document/1188196/}},
+    ISSN={},
+    month={Nov}
+}
+
+@article{SphereTheorems1947Rogers,
+    ISSN = {0003486X},
+    URL = {\url{http://www.jstor.org/stable/1969390}},
+    author = {C. A. Rogers},
+    journal = {Annals of Mathematics},
+    number = {4},
+    pages = {994--1002},
+    publisher = {Annals of Mathematics},
+    title = {Existence Theorems in the Geometry of Numbers},
+    volume = {48},
+    year = {1947}
+}
+
+@article{HighDensityPackings2011OToole,
+    author = {O’Toole, Patrick I. and Hudson, Toby S.},
+    title = {New High-Density Packings of Similarly Sized Binary Spheres},
+    journal = {The Journal of Physical Chemistry C},
+    volume = {115},
+    number = {39},
+    pages = {19037-19040},
+    year = {2011},
+    doi = {10.1021/jp206115p},
+    URL = {\url{https://doi.org/10.1021/jp206115p }},
+    eprint = { https://doi.org/10.1021/jp206115p }
+}
+
+@article{SphereUpperBounds2014DeLaat,
+    title={Upper bounds for packings of spheres of several radii},
+    volume={2},
+    DOI={10.1017/fms.2014.24},
+    journal={Forum of Mathematics, Sigma},
+    publisher={Cambridge University Press},
+    author={de Laat, David and de Oliveira Filho, Fernando Mário and Vallentin, Frank},
+    year={2014},
+    pages={e23},
+    url = {\url{https://doi.org/10.1017/fms.2014.24}},
+}
+
+@article{PackingCurvature1978Boroczky,
+    author="B{\"o}r{\"o}czky, K.",
+    title="Packing of spheres in spaces of constant curvature",
+    journal="Acta Mathematica Academiae Scientiarum Hungarica",
+    year="1978",
+    month="Sep",
+    day="01",
+    volume="32",
+    number="3",
+    pages="243--261",
+    issn="1588-2632",
+    doi="10.1007/BF01902361",
+    url={\url{https://doi.org/10.1007/BF01902361}}
 }
