--- a/texfiles/sources.tex
+++ b/texfiles/sources.tex
@@ -80,6 +80,45 @@
     underpin my dissertation. In the end, I decided still to cite them as they
     were a part of my research, as stated previously. \\
 
+    WHAT IS CRISPR-CAS9? \cite{CRISPRDailymail} &
+
+    This is a short ``article'' offering a brief introduction of the principles
+    of CRISPR-CAS9. The best part is probably a diagram produced by MIT. It's
+    not particularly informative aside from the most general, basic sense. &
+
+    It's literally not from a scientific publication and has no academic merit.
+    This is a bad source and does not prove or reinforce anything.
+
+    \\
+
+    OligoCalc: an online oligonucleotide properties calculator \cite{oligotm} &
+
+    This is the attribution for Oligo Calc, which I mention as a popular tool in
+    bioinformatics to process olignocleotide data. &
+
+    This is the requested citation from the authors of the tool.
+
+    \\
+
+    PEP 257: Docstring conventions \cite{PEPDocstrings2014Goodger} &
+
+    This is part of the Python style guide, used to back up some of my
+    assertions about coding practices in my Definitions section. &
+
+    Of course, it isn't remotely academic and verges on being an appeal to
+    authority, but it is a well respected style guide with some explicit
+    reasoning behing the decisions being laid out.
+
+    \\
+
+    American Standard Code for Information Interchange \cite{ASCII1963ASA} &
+
+    This is the standard for ASCII, which I briefly mention while discussing
+    encodings, specifically different ways to encode the letter `A'. &
+
+    This is \textbf{the} authoritative source for this purpose, as it is
+    literally the standard that I am talking about.  \\
+
     Error detecting and error correcting codes \cite{Codes1950Hamming} &
 
     Gives a construction of Hamming codes and lays the foundation for many of
@@ -167,7 +206,8 @@
     It's a trustworthy article, and again provides more of a summary. It's
     written in a relatively friendly manner. \\
 
-    Hadamard matrices and their designs: A coding-theoretic approach \cite{HadamardCodingTheoretic1992AssmusKey} &
+    Hadamard matrices and their designs: A coding-theoretic approach
+    \cite{HadamardCodingTheoretic1992AssmusKey} &
 
     This paper gives a number of very mathematically involved constructions of
     Hadamard matrices. I didn't end up using any of these but it provided a
@@ -189,7 +229,8 @@
     the trustworthiness of the source due to the reasons described in section
     \ref{sourcenotes}.  \\
 
-    Lifted polynomials over ${F}_{16}$ and their applications to dna codes \cite{PolynomialDNA2013OztasSiap} &
+    Lifted polynomials over ${F}_{16}$ and their applications to dna codes
+    \cite{PolynomialDNA2013OztasSiap} &
 
     This is a paper about a highly specific and even more advanced class of
     codes. It involved a lot of field theory, so for someone with an A-level
@@ -215,7 +256,8 @@
 
     \\
 
-    Error correcting codes: Practical origins and mathematical implications \cite{CodesOrigins1978Pless} &
+    Error correcting codes: Practical origins and mathematical implications
+    \cite{CodesOrigins1978Pless} &
 
     This is a very short little paper, which provides a short history of the
     concept of codes. This makes it quite a special little paper, and quite nice
@@ -244,7 +286,8 @@
 
     \\
 
-    The degeneracy of the genetic code and Hadamard matrices.  \cite{DegeneracyHadamard2008Petoukhov} &
+    The degeneracy of the genetic code and Hadamard matrices.
+    \cite{DegeneracyHadamard2008Petoukhov} &
 
     This is a great paper talking about how Hadamard matrices can be applied to
     and modelled against genetic code. The really cool thing is that this is a
@@ -260,7 +303,8 @@
 
     \\
 
-    Construction of multilevel Hadamard matrices with small alphabet \cite{MultilevelConstruction2008TrinhFan} &
+    Construction of multilevel Hadamard matrices with small alphabet
+    \cite{MultilevelConstruction2008TrinhFan} &
 
     This is a very interesting topic, as it potentially deals with the major
     limitation of Hadamard matrices - them having an alphabet of 2. Being able
@@ -287,36 +331,6 @@
     way.
 
     \\
-
-    PEP 257: Docstring conventions \cite{PEPDocstrings2014Goodger} &
-
-    This is part of the Python style guide, used to back up some of my
-    assertions about coding practices in my Definitions section. &
-
-    Of course, it isn't remotely academic and verges on being an appeal to
-    authority, but it is a well respected style guide with some explicit
-    reasoning behing the decisions being laid out.
-
-    \\
-
-    WHAT IS CRISPR-CAS9? \cite{CRISPRDailymail} &
-
-    This is a short ``article'' offering a brief introduction of the principles
-    of CRISPR-CAS9. The best part is probably a diagram produced by MIT. It's
-    not particularly informative aside from the most general, basic sense. &
-
-    It's literally not from a scientific publication and has no academic merit.
-    This is a bad source and does not prove or reinforce anything.
-
-    \\
-
-    American Standard Code for Information Interchange \cite{ASCII1963ASA} &
-
-    This is the standard for ASCII, which I briefly mention while discussing
-    encodings, specifically different ways to encode the letter `A'. &
-
-    This is \textbf{the} authoritative source for this purpose, as it is
-    literally the standard that I am talking about.  \\
 
     Thoughts on inverse orthogonal matrices, simultaneous
     signsuccessions, and \ldots \cite{OrthogonalMatrix1867Sylvester} &
@@ -361,6 +375,243 @@
 
     It was produced by an absolute icon and again is an academic, peer reviewed
     article so is certainly trustworthy.  \\
+
+    A Fuzzy Hamming Distance \cite{FuzzyDistance1977SGarro} &
+
+    An article about the Hamming distance (and fuzzy extensions of it), used to
+    provide a credible source for the definition and utility of Hamming
+    distance. &
+
+    This is an article from a reputable journal, providing a definition of
+    Hamming distance in line with various other sources such as
+    \cite{Orthogonal1981Burley}.
+
+    \\
+
+    DNA Sequencing and Melting Curve \cite{MeltingCurve1979Azbel} &
+
+    This is an article about the behaviour of DNA and similar molecules at high
+    temperatures. This is useful to provide a citation regarding the melting of
+    DNA at high temperatures, and how this can be influenced by the sequence of
+    nucleotides. &
+
+    This is a well-informed source using sound methods, and provides some pretty
+    authoritative discussion. It doesn't discuss anything particularly
+    controversial and has stood the test of time so is surely an adequate
+    reference. It is corroborated by \cite{MeltingPoint1980Pitkin}.
+
+    \\
+
+    Single-molecule denaturation mapping of DNA in nanofluidic channels
+    \cite{Denaturation2010Reisner} &
+
+    This article discusses other potential problems for certain types of DNA,
+    namely denaturation. This is also used for a small part of my dissertation
+    where I discuss potential limitations of my methods. &
+
+    Again, it doesn't bring up anything particularly controversial and seems to
+    be a good academic source.
+
+    \\
+
+    DNA Melting Point Laboratory \cite{MeltingPoint1980Pitkin} &
+
+    This is a more expert source on the topic of DNA melting points, which is
+    used alongside \cite{MeltingCurve1979Azbel} to provide credence to my
+    assertions about all our DNA melting. &
+
+    Similarly to \cite{MeltingCurve1979Azbel}, it is reputable and in mutual
+    agreement with another source. Nothing to see here.
+
+    \\
+
+    Cas9-Guide RNA Directed Genome Editing in Soybean \cite{Soybean2015Li} &
+
+    This and the following sequence of other articles are about applications of
+    genome editing. This one outlines their method for editing soy beans
+    specifically. &
+
+    It provides useful context for possible applications - although it is more
+    of a proof of concept, this is all I need to briefly talk about potential
+    applications.
+
+    \\
+
+    Optimized gene editing technology for Drosophila melanogaster using germ
+    line-specific Cas9 \cite{Flies2013Ren} &
+
+    This article is about applying these techniques to flies, which is a little
+    step above plants, and provides some more interesting discussion about
+    living organisms &
+
+    Again, the outline of the methodology is all I need and what I get. It helps
+    that they're still all credible articles from credible journals.
+
+    \\
+
+    A CRISPR/Cas9 Toolbox for Multiplexed Plant Genome Editing and
+    Transcriptional Regulation \cite{PlantToolbox2015Lowder} &
+
+    This is somewhat interestingly about a general ``toolbox'' rather than a
+    specific method and works to illustrate the general potential wider scope of
+    CRISPR/Cas9. &
+
+    Again credible journal source with sound methodologoy and recognition.
+
+    \\
+
+    Targeted Mutagenesis, Precise Gene Editing, and Site-Specific Gene Insertion
+    in Maize Using Cas9 and Guide RNA \cite{Maize2015Svitashev} &
+
+    This is more of a topical application in the field of GM crops. It is also
+    slightly different in that it is about mutagenesis, which all is interesting
+    as further context. &
+
+    Good article source with sound rapport
+
+    \\
+
+    Efficient genome engineering in human pluripotent stem cells using Cas9 from
+    Neisseria meningitidis \cite{StemCells2013Hou} &
+
+    This is more of a cutting-edge application of CRISPR (or, at least, feels
+    like it) surrounded in more moral dilemma. It is about the application of
+    CRISPR to human stem cells. However, controversial, it makes the list of
+    applications all the more diverse. &
+
+    This can be truste.
+
+    \\
+
+    On an Application of Kronecker Product of Matrices to Statistical Designs
+    \cite{KroneckerProduct1955Vartak} &
+
+    This article introduces the Kr\"onecker product, and then goes on to explore
+    some statistical applications of it. I use the citation to define the
+    Kr\"onecker product in a short aside among some other matrix arithmetic. &
+
+    It is literally just a definition of the Kr\"onecker product, so it can't
+    really be wrong. It also goes on to look at some interesting stuff in
+    statistical designs.
+
+    \\
+
+    Vector Orthogonal Polynomials \cite{Orthogonal1981Burley} &
+
+    This source mentions orthogonal vectors, which are used in the definition of
+    Hadamard matrices by Sylvester in \cite{OrthogonalMatrix1867Sylvester}. This
+    can be used to back up that and any other references to orthogonality. &
+
+    Again, this definition agrees with the mathematical community so there is
+    no reason to question this source.
+
+    \\
+
+    A Guided Tour to Approximate String Matching \cite{Levenshtein2001Navarro} &
+
+    This source provides a definition of the fuzzier Levenshtein distance (as
+    opposed to \cite{Codes1950Hamming}). It is used to juxtapose with Hamming
+    codes. &
+
+    This source provides the correct definition of Levenshtein distance (in
+    agreement with \cite{StringtoString1974Wagner}.
+
+    \\
+
+    The String-to-String Correction Problem \cite{StringtoString1974Wagner} &
+
+    This again provides the Levenshtein distance, which is used to expand on the
+    idea of string distance and go past the simple Hamming distance. &
+
+    This source is in agreement with many other sources, such as
+    \cite{Levenshtein2001Navarro}.
+
+    \\
+
+    An efficient class of SEC-DED-AUED codes
+    \cite{HammingCodes1997Battacharryya} &
+
+    This describes a set of Single Error Correcting, Double Error Detecting
+    codes, which are a well known application of Hamming codes. &
+
+    The construction of their class is valid, and more importantly it
+    demonstrates the active research in this area.
+
+    \\
+
+    A note on a result in the theory of code construction
+    \cite{HadamardNote1959Bose} &
+
+    This is a short note on something related to Hadamard matrices. Not
+    particularly useful, but an interesting addition to the other literature I
+    have on Hadamard matrices. &
+
+    It's not a full article but still provides sound mathematics and insight.
+
+    \\
+
+    On the assignment of Walsh and quasi-orthogonal codes in a multicarrier
+    DS-CDMA system with multiple classes of users
+    \cite{OrthogonalCodes2002Amadei} &
+
+    This is an article about real-world applications of highly
+    mutation-resistant codes like the Hadamard code, which is a good link to
+    other applications, and also just generally about Hadamard codes. &
+
+    While no longer entirely theoretical computer science, it remains a factual
+    article.
+
+    \\
+
+    Existence Theorems in the Geometry of Numbers
+    \cite{SphereTheorems1947Rogers} &
+
+    While talking about some other interesting geometric theorems, this mentions
+    a couple of sphere-packing theorems, which is why I'm using it as a short
+    reference for the problem of sphere packing in arbitrary dimensions, and its
+    relation to barcode design. &
+
+    It's not inaccurate and a pretty good read
+
+    \\
+
+    New High-Density Packings of Similarly Sized Binary Spheres
+    \cite{HighDensityPackings2011OToole} &
+
+    This is talking specifically about the packing of discrete (binary) spheres,
+    which is particularly pertinent to the application I have for sphere
+    packing, making this a strong reference. &
+
+    It would be unfair to say that this was in disagreement with eg
+    \cite{PackingCurvature1978Boroczky} or \cite{SphereUpperBounds2014DeLaat}.
+
+    \\
+
+    Upper bounds for packings of spheres of several radii
+    \cite{SphereUpperBounds2014DeLaat} &
+
+    This provides some upper bounds, which works to illustrate the way our
+    knowledge of sphere packing works - we know some things, like upper bounds,
+    but we haven't got an optimal solution. &
+
+    It's all fine - as it is a fairly recent source, the upper bounds are still
+    relevant. This is one of the rare cases where the year a mathematical
+    article was written actually matters.
+
+    \\
+
+    Packing of spheres in spaces of constant curvature
+    \cite{PackingCurvature1978Boroczky} &
+
+    This is just one last source corroborating the others about sphere packing.
+    It deals with the same broad topics (although this one goes a bit
+    topological about curvature). It's used as just one more citation for
+    sphere-packing as a topic. &
+
+    This is from a reputable journal and has certainly stood the test of time
+    and peer review.
+
+    \\
 
     \bottomrule
     \end{longtable}
